--- a/public/src/styles/timeline.css
+++ b/public/src/styles/timeline.css
@@ -38,6 +38,8 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+  height: 400px;
+  width: 600px;
 }
 .fixed-button{
   position: fixed;
